--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,6 @@
     <div id="main"></div>
   </body>
 
-  <script type="module" src="index.js"></script> 
+  <script type="module" src="index.ts"></script> 
 
 </html>
