--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>React Tac Toe</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
     <link href="https://fonts.googleapis.com/css?family=Fascinate" rel="stylesheet">
-   
-    <title>Tic Tac Toe</title>
   </head>
 
   <body>
